[gd_scene load_steps=3 format=3 uid="uid://c6q8vvworcqe2"]

[ext_resource type="Texture2D" uid="uid://d13pf3imygnxn" path="res://common/scene_debug_aim/aim.png" id="1_c3kbg"]
[ext_resource type="Script" path="res://common/scene_debug_aim/debug_aim.gd" id="2_se67n"]

[node name="DebugCircle" type="Sprite2D"]
texture = ExtResource("1_c3kbg")
script = ExtResource("2_se67n")

[node name="PosLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 2.562
anchor_right = 0.5
anchor_bottom = 2.562
offset_left = -24.0
offset_top = -15.496
offset_right = 16.0
offset_bottom = 7.504
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="DebugLabel" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 2.812
anchor_right = 0.5
anchor_bottom = 2.812
offset_left = -24.0
offset_top = 13.504
offset_right = 16.0
offset_bottom = 36.504
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
